# DL_NLP

./: .gitignore  README.md  pyproject.toml
HW_1/: hw_1.ipynb
HW_2/: hw_2.ipynb
HW_3/: itmo_dl_nlp_course_06_seq2seq.ipynb
HW_4/: hw_4.ipynb  labeling.ipynb
